RESOLVED FIXED 35532
REGRESSION: [view goToBackForwardItem:[[view backForwardList] currentItem]] is broken
https://bugs.webkit.org/show_bug.cgi?id=35532
Summary REGRESSION: [view goToBackForwardItem:[[view backForwardList] currentItem]] i...
Brady Eidson
Reported 2010-03-01 11:20:07 PST
The following previously working code is broken: WebView* view = */ some view /*; [view goToBackForwardItem:[[view backForwardList] currentItem]]; Telling a Page/FrameLoader to go to the same HistoryItem that is its current HistoryItem is supposed to effectively reload the page. creating a new load and new document. With the changes to FrameLoader for state objects and certain hash navigations be "same document" navigations, this API started acting as a "same document load" One concrete example of where this breaks Safari is in the anti-phishing warning, where you can no longer "ignore" an anti-phishing alert. "http://aboutbillgates.com" is a current example of a site google has flagged as malware and can be used to test this breakage. The WebCore fix is easy, a layout test requires an API specific addition, and a patch is on its way.
Attachments
Fix + layouttest (14.35 KB, patch)
2010-03-01 11:55 PST, Brady Eidson
sam: review+
beidson: commit-queue-
Brady Eidson
Comment 1 2010-03-01 11:20:57 PST
Brady Eidson
Comment 2 2010-03-01 11:55:20 PST
Created attachment 49732 [details] Fix + layouttest
Sam Weinig
Comment 3 2010-03-01 12:54:52 PST
Comment on attachment 49732 [details] Fix + layouttest r=me. Thanks for making a test for this.
Brady Eidson
Comment 4 2010-03-01 13:15:54 PST
Eric Seidel (no email)
Comment 5 2010-03-05 14:08:40 PST
This new test is broken on windows: http://build.webkit.org/results/Windows%20Debug%20(Tests)/r55554%20(10403)/results.html I'm not sure how long it's been broken, but longer than the buildbot can remember. :(
Brady Eidson
Comment 6 2010-03-05 15:02:28 PST
We need to add it to the skipped list I guess, because I won't be able to look at it on windows in the short term.
Eric Seidel (no email)
Comment 7 2010-03-05 15:05:12 PST
rs=me on doing so.
Brady Eidson
Comment 8 2010-03-08 12:22:28 PST
Fixed for reals in r55678
Note You need to log in before you can comment on or make changes to this bug.