REGRESSION: Telling a WebView to go to its current WebHistoryItem is broken. <rdar://problem/7699371> and https://bugs.webkit.org/show_bug.cgi?id=35532

Reviewed by Sam Weinig.

WebCore:

Test: fast/loader/api-test-go-to-current-back-forward-item.html

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::loadItem): If the current item is the same as the target item, don't
  consider this to be a same document navigation.

* page/Page.cpp:
(WebCore::Page::goToItem): Hard code the "going to the same item as the current item" relationship
  as a precondition for stopping all loaders, as that will be a new document load.

WebKitTools:

* DumpRenderTree/LayoutTestController.cpp:
(apiTestGoToCurrentBackForwardItemCallback):
(LayoutTestController::staticFunctions):
* DumpRenderTree/LayoutTestController.h:
* DumpRenderTree/mac/LayoutTestControllerMac.mm:
(LayoutTestController::apiTestGoToCurrentBackForwardItem):

Stubs for now:
* DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
(LayoutTestController::apiTestGoToCurrentBackForwardItem):
* DumpRenderTree/win/LayoutTestControllerWin.cpp:
(LayoutTestController::apiTestGoToCurrentBackForwardItem):
* DumpRenderTree/wx/LayoutTestControllerWx.cpp:
(LayoutTestController::apiTestGoToCurrentBackForwardItem):

LayoutTests:

* fast/loader/api-test-go-to-current-back-forward-item-expected.txt: Added.
* fast/loader/api-test-go-to-current-back-forward-item.html: Added.
* platform/gtk/Skipped:
* platform/qt/Skipped:
* platform/win/Skipped:



Canonical link: https://commits.webkit.org/46676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55375 268f45cc-cd09-0410-ab3c-d52691b4dbfc