WebKitTools/DumpRenderTree/LayoutTestController.h
@@ -237,6 +237,7 @@ public:
     // The following API test functions should probably be moved to platform-specific 
     // unit tests outside of DRT once they exist.
     void apiTestNewWindowDataLoadBaseURL(JSStringRef utf8Data, JSStringRef baseURL);
+    void apiTestGoToCurrentBackForwardItem();
 
     static const unsigned maxViewWidth;
     static const unsigned maxViewHeight;
