WebKitTools/DumpRenderTree/wx/LayoutTestControllerWx.cpp
@@ -386,3 +386,8 @@ void LayoutTestController::apiTestNewWindowDataLoadBaseURL(JSStringRef utf8Data,
 {
 
 }
+
+void LayoutTestController::apiTestGoToCurrentBackForwardItem()
+{
+
+}
